test/scc/expr/semantic-errors/146.t
void test()
{
    struct
    {
        int a;
        struct
        {
            int b, c;
        } d;
    } e = { .d = { 0, 1 }, 3};
}